# reverse-proxy

./: .README.md.swp  README.md  default.conf  docker-compose.yml  docker_stats-numpy-01-api-scale-2.csv  docker_stats.csv  docker_stats2csv.sh  docker_stats2csvhost.sh  docker_stats_250226141636.json  main.py  pyproject.toml
blog/: index.html
conf/cache/: default.conf
conf/lb/: default.conf  nginx.conf
conf/nginx/: nginx.conf
conf/nginx/conf.d/: default.conf
conf/prometheus/: prometheus.yml
docker/fastapi/: Dockerfile
ng/: docker-compose.yml
ng/ngrinder-controller/db/: h2.mv.db  h2.trace.db
nginx-sites-enabled/: lb  mygoogle  mynaver
ngrinder-controller/db/: h2.mv.db  h2.trace.db
ngrinder-controller/script/admin/: TestRunner.groovy
note/: 00_resample.ipynb  01_numpy_diff_ng.ipynb  01_numpy_diff_stats.ipynb  01_numpy_dstats.csv  01_numpy_dstats.ipynb  01_numpy_dstats.parquet  01_numpy_join.ipynb  01_numpy_merged.parquet  01_numpy_ng.csv  01_numpy_ng.ipynb  01_numpy_ng.parquet  docker_stats-numpy-1.csv  docker_stats-numpy-2.csv  docker_stats-numpy-3.csv  docker_stats-numpy-4.csv  docker_stats-numpy-5.csv  docker_stats-py01.csv  docker_stats.csv  docker_stats.ipynb  docker_stats_python-1.csv  keepalive_timeout-0_conReset-YES.csv  keepalive_timeout-1_conReset-YES.csv  keepalive_timeout-65_conReset-NO.csv  keepalive_timeout-65_conReset-YES.csv  nginx.ipynb  nginx_status.csv  nginx_status.py  nginx_status_sd.py  numpy-basic.ipynb  q.ipynb  team.py
pyweb1/: index.html
pyweb2/: index.html
pyweb4/: index.html
src/reverse_proxy/: higher_ordder_fun.py
(+27 files in other folders)
