[project]
name = "reverse-proxy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ppabam", email = "tom@diginori.com"},
]
dependencies = ["fastapi[standard]>=0.115.8", "numpy>=2.2.3", "pandas>=2.2.3", "pyarrow>=19.0.1", "scikit-learn>=1.6.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
note = [
    "seaborn>=0.13.2",
]
matplotlib = [
    "jupyterlab>=4.3.5",
]
